--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,4 +7,27 @@
 	color: inherit;
 	background-color: inherit;
 	background-image: inherit;
+
+	padding: 1rem 3rem;
+}
+
+.main-content {
+    text-align: justify;
+
+  @include large {
+    max-width: 64rem;
+    padding: 0rem 6rem;
+    margin: 0 auto;
+    font-size: 1.1rem;
+  }
+
+  @include medium {
+    padding: 0rem 4rem;
+    font-size: 1.1rem;
+  }
+
+  @include small {
+    padding: 0rem 1rem;
+    font-size: 1rem;
+  }
 }
