--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,15 @@
 	padding: 1rem 3rem;
 }
 
+.main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
+	color: unset;
+}
+
+body {
+	font-family: serif;
+	color: #000000;
+}
+
 .main-content {
     text-align: justify;
 
