--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,12 +3,23 @@
 
 @import "{{ site.theme }}";
 
+@font-face {
+  font-family: 'Dancing Script';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Dancing Script Regular'), local('DancingScript-Regular'), url(https://fonts.gstatic.com/s/dancingscript/v9/If2RXTr6YS-zF4S-kcSWSVi_szLuiuQ.ttf) format('truetype');
+}
+
 .page-header {
 	color: inherit;
 	background-color: inherit;
 	background-image: inherit;
 
 	padding: 1rem 3rem;
+}
+
+.project-name {
+	font-family: dancingscript-regular,dancing script,cursive;
 }
 
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 {
