--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,15 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
+
+    <nav class="main-nav">
+      <ul>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#artists">Artists</a></li>
+        <li><a href="#press">Press</a></li>
+        <li><a href="#contacts">Contacts</a></li>
+      </ul>
+    </nav>
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
