--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -51,3 +51,31 @@ body {
     font-size: 1rem;
   }
 }
+
+nav {
+	ul {
+	    list-style-type: none;
+	    margin: 0;
+	    padding: 0;
+	    overflow: hidden;
+	    background-color: #333;
+	    white-space: nowrap;
+	}
+
+	li {
+		display: table-cell;
+	}
+
+	li a {
+	    display: inline-block;
+	    color: white;
+	    text-align: center;
+	    padding: 14px 16px;
+	    text-decoration: none;
+	}
+
+	/* Change the link color to #111 (black) on hover */
+	li a:hover {
+	    background-color: #111;
+	}
+}
