--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,10 +23,12 @@
 
     <nav class="main-nav">
       <ul>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#artists">Artists</a></li>
-        <li><a href="#press">Press</a></li>
-        <li><a href="#contacts">Contacts</a></li>
+        <div class="main-content">
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#artists">Artists</a></li>
+          <li><a href="#press">Press</a></li>
+          <li><a href="#contacts">Contacts</a></li>
+        </div>
       </ul>
     </nav>
     <header class="page-header" role="banner">
