--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,8 @@
 
     <main id="content" class="main-content" role="main">
       {{ content }}
+
+      <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fartmeassociation&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden; margin: 0 auto; display: block;" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
     </main>
   </body>
 </html>
